# py32f002b

./: .gitignore  CMakeLists.txt  Kconfig  README.md  sdkconfig  sdkconfig.h
app/: main.c
board/: board.c  board.h  hal_msp.c  interrupt.c
board/arch/: system_py32f0xx.c
board/config/: py32f002b_hal_conf.h
board/misc/: PY32F0_Series.yaml  board.cfg
board/ports/kservice/: kservice-ports.c  kservice-ports.h
components/: CMakelists.txt  Kconfig
components/irc/: irc.c  irc.h
components/log/: log.c  log.h
components/ringbuffer/: ringbuffer.c  ringbuffer.h
components/utils/: compiler.h  kservice.c  kservice.h  kstdio.c  kstdio.h  progress_bar.c  progress_bar.h  utility.c  utility.h  utils.c  utils.h
docs/: PY32F002B核心板引脚分配表.xls
libraries/: CMakeLists.txt
projects/: projects.uvprojx
tools/cmake/: flashing.cmake  kconfig.cmake  toolchain.cmake
tools/encryption/: README.md
tools/kconfig/: kconfig.py
